--- a/package.json
+++ b/package.json
@@ -20,22 +20,27 @@
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/supabase-js": "^2.49.4",
     "@types/js-cookie": "^3.0.6",
+    "@vercel/sdk": "^1.10.0",
+    "ai": "^4.3.19",
     "aos": "^2.3.4",
     "base64-arraybuffer": "^1.0.2",
     "chart.js": "^4.5.0",
     "globalpayments-3ds": "^1.8.7",
     "js-cookie": "^3.0.5",
     "next": "15.3.2",
+    "openai": "^5.10.2",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "recharts": "^2.15.4",
-    "resend": "^4.6.0"
+    "resend": "^4.6.0",
+    "swr": "^2.3.4",
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/aos": "^3.0.7",
-    "@types/node": "^20",
+    "@types/node": "^20.19.9",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
