--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "ai": "^4.3.19",
     "aos": "^2.3.4",
     "base64-arraybuffer": "^1.0.2",
+    "canvas-confetti": "^1.9.3",
     "chart.js": "^4.5.0",
     "globalpayments-3ds": "^1.8.7",
     "js-cookie": "^3.0.5",
@@ -40,6 +41,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/aos": "^3.0.7",
+    "@types/canvas-confetti": "^1.9.0",
     "@types/node": "^20.19.9",
     "@types/react": "^19",
     "@types/react-dom": "^19",
